<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="my_account">My account</string>
    <string name="Order_number">Order Number</string>
    <string name="Dash_borad">Dashborad</string>
    <string name="points">Points</string>
    <string name="back">Back</string>
    <string name="Order_type">Type</string>
    <string name="comments">Comments</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="help">Help</string>
    <string name="points_in_cart">Points in Cart</string>
    <string name="points_left">Points Left</string>
    <string name="home">Home</string>
    <string name="selectQty">Select Qty</string>
    <string name="select_state">Select state</string>
    <string name="whats_hot">What\'s Hot</string>
    <string name="wish_list">My Wish List</string>
    <string name="cart">Cart</string>
    <string name="shop">Shop</string>
    <string name="category_menu">Category Menu</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="emailid">Email id</string>
    <string name="send">Send</string>
    <string name="email_addr">Email Address</string>
    <string name="day_phone">Day Phone</string>
    <string name="order_number">Order Number</string>
    <string name="evening_Phone">Evening Phone</string>
    <string name="message">Message</string>
    <string name="mobilenumber">Mobile number</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="floor">Floor/Region/Office name</string>
    <string name="companyname">Company name</string>
    <string name="place_order">Place Order</string>
    <string name="shipping_address">Shipping address</string>
    <string name="price_range">Price Range</string>
    <string name="start_shopping">Start Shopping </string>
    <string name="total_points">Total Points</string>
    <string name="continues">Continue</string>
    <string name="app_name">Taico</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="category">Category Menu</string>
    <string name="category_details">Salvatore Ferragamo W Chain Tote Safari</string>
    <string name="ptcart">Points in Cart</string>
    <string name="ptcartval">158</string>
    <string name="ptleft">Points Left</string>
    <string name="ptleftval">152841.4</string>
    <string name="title_activity_wish_list">WishListActivity</string>
    <string name="clear">Clear Wish List</string>
    <string name="clear_crt">Delete cart</string>
    <string name="wish_title">Cinda b Pocket Wallet- Ravinia Black</string>
    <string name="body">A wallet, or billfold, is a small, flat case that is used to carry </string>
    <string name="gift"> This order is a gift</string>
    <string name="dec"> Do you want to use your points to pay for the income taxes?</string>
    <string name="dec1">Are you shipping to your home or business address?</string>
    <string name="preference">Select Preference</string>
    <string name="search">Search</string>
    <string name="success"> your order was successfully submitted</string>
    <string name="change">Orders are processed immediately and cannot be changed or cancelled once they are submitted.</string>
    <string name="thank">Thank you for your order submitted on the online incentive program.</string>
    <string name="tracking">TRACKING IS NOT ALWAYS UPDATED IMMEDIATELY</string>
    <string name="please">Please note that some orders may take longer than others</string>
    <string name="order">IF YOU ORDERED MORE THAN ONE ITEM,PLEASE NOTE..</string>
    <string name="in">In the event your order is not received by then, you may contact us the "Customer Service" page.This is conveniently located in the "Main Account" area of the incentive site.</string>
    <string name="we">WE APPRECIATE YOUR PATIENCE</string>
    <string name="service">For fastest service:</string>
    <string name="then">Then on the customer Service Tab.Find Your Order and click on the question mark</string>
    <string name="click">Click on the</string>
    <string name="email">Or email us at </string>
    <string name="call">Or call us at</string>
    <string name="Thank_you">Thank you for using Incentiweb.</string>
    <string name="old_pwd">Enter old password</string>
    <string name="new_pwd">Enter new password</string>
    <string name="pwd">Password</string>
    <string name="re_enter_new_pwd">Re-enter new password</string>
    <string name="addrs1">Address1</string>
    <string name="addrs2">Address2</string>
    <string name="addrs3">Address3</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="sort">Sort</string>
    <string name="go">Go</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="feed_back">Feedback</string>
    <string name="readmore">Read more.</string>
    <string name="static_Txt1">If you are shipping to your home, remember some items may require a signature, so be sure someone is there to accept delivery</string>
    <string name="static_Txt2">If you are shipping to your office, be sure the shipping address includes Company name and floor, suite or room number as appropriate</string>
    <string name="policy">The address information above is accurate and I have read and understand the  Return Policy</string>
    <string name="account_history">Account history</string>
    <string name="help_tracking">Help/Tracking</string>
    <string name="change_password">Change password</string>
    <string name="add_to_cart">add to cart</string>
      <string name="name_s">Name</string>
      <string name="client_s">Client</string>
        <string name="email_s">Email</string>
         <string name="wht_evn">What event are you looking for</string>
         <string name="many_tickets">How many tickets would you like</string>
         <string name="event_city">Event City</string>
        <string name="event_state">Event State</string>
         <string name="any_preferred_seating">Any Preferred Seating</string>
          <string name="req_ticket">REQUEST TICKET</string>
          <string name="date_of_event">Date of event:</string>
          
          <string name="entertainment_dec">Please enter the following information so that we may process your order</string>
          <string name="entertainment_dec1">We are upgrading our Ticket website with the latest selections and technology.In the meantime, we have provided you with a personal ticket concierge.Remember you can request a ticket to any sporting and entertainment event including Ballet, Opera, Theater, Comedy, Las Vegas and Theater. Please fill out your request and we will have one of our experts acquire your tickets Hours of operation 10AM to 6PM eastern time Monday - Friday Although our ticket coordinator usually gets back to you within a few hours of submission during business hours, there may be times when volume is high, so please allow a full day for our coordinator to get back to you.
         </string>
         <string name="depart_date">Depart Date:</string>
         <string name="req_trip">REQUEST TRIP</string>
          <string name="when_city_state">Where (city, state, hotel, address, etc.)</string>
         
         <string name="when">When</string>
         <string name="check_in">Check-in:</string>
         <string name="check_out">Check-out:</string>
         <string name="rooms">Rooms:</string>
         <string name="guests">Guests:</string>
        <string name="round_trip">Round Trip:</string>
         <string name="one_way">One Way:</string>
         
         <string name="start_shping">START SHOPPING</string>
         <string name="my_acuts">MY ACCOUNT</string>
         
          <string name="sort_by_points">Sort By Points :   </string>
      
</resources>