<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <include layout="@layout/header" />
    </LinearLayout>

    <View
        android:id="@+id/lin"
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/lay"
        android:layout_marginTop="5dp"
        android:background="@color/line"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rrr"
        android:layout_below="@+id/lay"
        android:background="@color/back_ground" >

        <LinearLayout
            android:id="@+id/rrr_scr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/back_ground"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/txt_success"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/success"
                android:textColor="#002663" />
<Button
                    android:id="@+id/btn_go_to_dashboard"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editPassword"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/green_border"
                    android:padding="6dp"
                    android:layout_centerHorizontal="true"
                    android:text="Go to dashboard"
                      android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_height1"
                    android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/linn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#cccccc"
                android:paddingLeft="0.2dp"
                android:paddingRight="0.2dp"
                android:paddingTop="0.2dp" >

                <TextView
                    android:id="@+id/txt_product"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.2dp"
                    android:layout_weight="0.5"
                    android:background="#ffffff"
                    android:padding="5dp"
                    android:text="Product" />

                <TextView
                    android:id="@+id/txt_ordernum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.2dp"
                    android:layout_weight="0.5"
                    android:background="#ffffff"
                    android:padding="5dp"
                    android:text="Order Number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:orientation="vertical"
                android:padding="0.2dp" >
            </LinearLayout>
            <TextView
                android:id="@+id/txt_change"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rect_grey"
                android:padding="5dp"
                android:text="@string/change" />

            <TextView
                android:id="@+id/txt_thank"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/thank" />

            <TextView
                android:id="@+id/txt_tracking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tracking" />

            <TextView
                android:id="@+id/txt_please"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/please" />

            <TextView
                android:id="@+id/txt_order"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/order" />

            <TextView
                android:id="@+id/txt_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/in" />

            <TextView
                android:id="@+id/txt_we"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/we" />

            <TextView
                android:id="@+id/txt_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/service"
                android:textColor="#000000"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="MY ACCOUNT"
                    android:textColor="#002663"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="link"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_then"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/then"
                android:textColor="#000000"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/txt_emailid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="abc@gmail.com"
                    android:textColor="#002663" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_call"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call" />

                <TextView
                    android:id="@+id/txt_callnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="99885566325"
                    android:textColor="#002663" />

                <TextView
                    android:id="@+id/txt_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Free"
                    android:textColor="#f2008c" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_thankyou"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Thank_you"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>