<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_back"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@null"
        android:drawableLeft="@drawable/down_arrow"
        android:drawablePadding="10dp"
        android:gravity="left|center_vertical"
        android:minHeight="0dip"
        android:minWidth="0dip"
        android:paddingLeft="10dp"
        android:text="@string/forgot_pwd"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_height1" />

    <View
        android:id="@+id/lin"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/btn_back"
        android:layout_marginTop="5dp"
        android:background="@color/line" />

    <EditText
        android:id="@+id/user_txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/lin"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bgs"
        android:hint="@string/username"
        android:inputType="textCapSentences"
        android:maxLines="3"
        android:paddingLeft="10dp"
        android:textColor="@color/input_box_hint"
        android:textSize="@dimen/medium_size" >
    </EditText>

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/user_txt"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bgs"
        android:hint="@string/emailid"
        android:inputType="textCapSentences"
        android:maxLines="3"
        android:paddingLeft="10dp"
        android:textColor="@color/input_box_hint"
        android:textSize="@dimen/medium_size" >
    </EditText>

    <EditText
        android:id="@+id/mob_txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email_txt"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bgs"
        android:hint="@string/mobilenumber"
        android:inputType="textCapSentences"
        android:maxLines="3"
        android:paddingLeft="10dp"
        android:textColor="@color/input_box_hint"
        android:textSize="@dimen/medium_size" >
    </EditText>

    <RelativeLayout
        android:id="@+id/rrr"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/sign_txt"
        android:padding="5dp" >

        <TextView
            android:id="@+id/submit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/submit"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/large_size" />
    </RelativeLayout>

</RelativeLayout>