<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back_ground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".65"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bag3"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".35"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textMiddle" >

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edttxt_border"
                    android:drawableLeft="@drawable/useri"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/input_box_hint"
                    android:textSize="@dimen/button_height" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editEmail"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edttxt_border"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/pwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/input_box_hint"
                    android:textSize="@dimen/button_height" />

                <Button
                    android:id="@+id/signin_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/green_border"
                    android:padding="8dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_height1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_forgot_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/signin_btn"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/forgot_pwd"
                    android:textColor="@color/forgot_txt"
                    android:textSize="@dimen/button_height"
                    android:visibility="visible" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>