<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rrr_lay"
    android:background="@color/back_ground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25"
            android:textColor="@color/forgot_txt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="-6dp"
            android:text="JULY"
            android:textColor="@color/input_box_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/contant_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/lay1"
        android:text="Beams Seat Belt Hardware Mounting Kit for 2 Plint Non-Retractable Seat Belts"
        android:textColor="@color/decription" />

    <TextView
        android:id="@+id/order_no_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lay1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="15dp"
        android:text="@string/Order_number"
        android:textColor="@color/input_box_hint" />

    <TextView
        android:id="@+id/order_no_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/order_no_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="1dp"
        android:text="@string/Order_number"
        android:textColor="@color/order_typ" />

    <TextView
        android:id="@+id/points_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/points"
       android:textColor="@color/input_box_hint"  />

    <TextView
        android:id="@+id/points_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/points_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-2dp"
        android:text="@string/points"
        android:textColor="@color/order_typ" />

    <TextView
        android:id="@+id/order_type__txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lay1"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="9dp"
        android:layout_marginTop="15dp"
        android:text="@string/Order_type"
       android:textColor="@color/input_box_hint"  />

    <TextView
        android:id="@+id/order_type__txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/order_type__txt"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="21dp"
        android:text="@string/Order_type"
        android:textColor="@color/order_typ" />

    <TextView
        android:id="@+id/tracking_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/order_no_txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="15dp"
        android:text="@string/tracking_number"
        android:textColor="@color/order_typ" />

    <TextView
        android:id="@+id/tracking_no1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tracking_no"
        android:layout_marginLeft="9dp"
        android:layout_toLeftOf="@+id/helt_txt1"
        android:text="Shipped directly from Manufacturer-no tracking available."
        android:textColor="@color/input_box_hint"  />

    <TextView
        android:id="@+id/helt_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/order_no_txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="9dp"
        android:layout_marginTop="15dp"
        android:text="@string/help"
        android:textColor="@color/order_typ" />

    <TextView
        android:id="@+id/helt_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/helt_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/help_1"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/comments_txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tracking_no1"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bgs"
        android:hint="@string/comments"
        android:inputType="textCapSentences"
        android:maxLines="3"
        android:visibility="gone"
        android:paddingLeft="10dp"
        android:textSize="14sp" >
    </EditText>

    <View
        android:id="@+id/lin"
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/comments_txt"
        android:layout_marginTop="15dp"
        android:background="@color/line" />

</RelativeLayout>